align labels fix

--- a/app/sass/blocks/types-clippers.sass
+++ b/app/sass/blocks/types-clippers.sass
@@ -63,7 +63,7 @@
 				+mq($max-width: 1200px)
 					width: 100%
 			.item__label
-				transform: translate(-25%, -75%) rotate(-72deg)
+				transform: translate(-52%, -30%) rotate(-72deg)
 		&:nth-child(3)
 			top: 62%
 			left: 61%
@@ -73,7 +73,7 @@
 				+mq($max-width: 1200px)
 					width: 100%
 			.item__label
-				transform: translate(-65%, -30%) rotate(-144deg)
+				transform: translate(-75%, -25%) rotate(-144deg)
 		&:nth-child(4)
 			top: 63%
 			left: 24%
